--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="./index.css">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="CS370 Term Project"
     />
-    <title>React App</title>
+    <title>Whats for dinner?</title>
   </head>
   <body>
     <div id="root"></div>
